# ORGNET

./: .gitignore  .gitmodules  README.md  build.sh
app/: HELLO.OPL  NCWIFI.OPL  NETCFG.OPL  appldr.inc  apps.inc  build.sh  comms.inc  comms.mock.inc  comms.real.inc  error.inc  line.inc  logo.inc  main.asm  netcfg.inc  tlmenu.inc  udg.inc  vectors.inc
firmware/: CMakeLists.txt  asmtest.h  build.sh  cmd.cpp  cmd.h  datapack.cpp  datapack.h  main.cpp  wifi.cpp  wifi.h
hardware/: ORGNET.kicad_pcb  ORGNET.kicad_pro  ORGNET.kicad_sch  fp-lib-table  sym-lib-table
hardware/gerber/: ORGNET-B_Cu.gbr  ORGNET-B_Mask.gbr  ORGNET-B_Paste.gbr  ORGNET-B_Silkscreen.gbr  ORGNET-Edge_Cuts.gbr  ORGNET-F_Cu.gbr  ORGNET-F_Mask.gbr  ORGNET-F_Paste.gbr  ORGNET-F_Silkscreen.gbr  ORGNET-job.gbrjob
service/: apps.inc  build.sh  comms.real.inc  error.inc  logo.inc  main.asm  netcfg.inc  orgnet.bld
service/toolchain/: build.bat
